# gen-ai

./: .gitignore  pyproject.toml  requirement.txt
basicChatbot/: 1-basicChatbot.ipynb
deep_agent/: 1-basicdeepagents.ipynb  2-backend.ipynb  3-contextengineering.ipynb
notes/: todo.txt
updatedlangchain/: 1-langchainintro.ipynb  2-modelIntegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
