[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "command>=0.1.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adaptor",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
