[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "command>=0.1.0",
    "deepagents>=0.6.12",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "grandalf>=0.8",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "pageindex>=0.2.8",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
]
